--- a/css/home.css
+++ b/css/home.css
@@ -57,7 +57,7 @@ body {
 }
 #navbar {
   margin: 0px 4px;
-  background-color: black;
+  background-color: rgb(46, 45, 45);
   border-radius: 5px;
   padding: 3px 0px;
 }
@@ -79,7 +79,17 @@ body {
 }
 
 #navbar li {
-  margin: 0px 10px;
+  padding: 10px;
+}
+
+#navbar li a {
+  padding: 10px;
+  border-radius: 5px;
+}
+
+#navbar li a:hover {
+  color: black;
+  background-color: white;
 }
 
 a {
